--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -2,13 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>江西师范大学软件学院毕业设计选题管理系统用户登录</title>
-<link href="css/login.css" rel="stylesheet" rev="stylesheet" type="text/css" media="all" />
-<script type="text/javascript" src="js/jQuery1.7.js"></script>
-<script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
-<script type="text/javascript" src="js/jquery1.42.min.js"></script>
-<script type="text/javascript" src="js/jquery.SuperSlide.js"></script>
-<script type="text/javascript" src="js/Validform_v5.3.2_min.js"></script>
+<title>请假管理系统用户登录</title>
+<link href="../static/css/login.css" rel="stylesheet" rev="stylesheet" type="text/css" media="all" />
+<script type="text/javascript" src="../static/js/jQuery1.7.js"></script>
+<script type="text/javascript" src="../static/js/jquery-1.8.2.min.js"></script>
+<script type="text/javascript" src="../static/js/jquery1.42.min.js"></script>
+<script type="text/javascript" src="../static/js/jquery.SuperSlide.js"></script>
+<script type="text/javascript" src="../static/js/Validform_v5.3.2_min.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){
 	var $tab_li = $('#tab ul li');
@@ -214,7 +214,7 @@ $(function(){
         <div id="code">
           <label>验证码：</label>
           <input type="text" id="stu_code_hide" name="code"  value="输入验证码" nullmsg="验证码不能为空！" datatype="*4-4" errormsg="验证码有4位数！" sucmsg="验证码验证通过！"/>
-          <img src="images/captcha.jpg" title="点击更换" alt="验证码占位图"/> </div>
+          <img src="../static/images/captcha.jpg" title="点击更换" alt="验证码占位图"/> </div>
         <div id="remember">
           <input type="checkbox" name="remember">
           <label>记住密码</label>
@@ -241,7 +241,7 @@ $(function(){
         <div id="code">
           <label>验证码：</label>
           <input type="text" id="tea_code_hide" name="code"  value="输入验证码" nullmsg="验证码不能为空！" datatype="*4-4" errormsg="验证码有4位数！" sucmsg="验证码验证通过！"/>
-          <img src="images/captcha.jpg" title="点击更换" alt="验证码占位图"/> </div>
+          <img src="../static/images/captcha.jpg" title="点击更换" alt="验证码占位图"/> </div>
         <div id="remember">
           <input type="checkbox" name="remember">
           <label>记住密码</label>
@@ -268,7 +268,7 @@ $(function(){
         <div id="code">
           <label>验证码：</label>
           <input type="text" id="sec_code_hide" name="code"  value="输入验证码" nullmsg="验证码不能为空！" datatype="*4-4" errormsg="验证码有4位数！" sucmsg="验证码验证通过！"/>
-          <img src="images/captcha.jpg" title="点击更换" alt="验证码占位图"/> </div>
+          <img src="../static/images/captcha.jpg" title="点击更换" alt="验证码占位图"/> </div>
         <div id="remember">
           <input type="checkbox" name="remember">
           <label>记住密码</label>
@@ -284,9 +284,9 @@ $(function(){
 <div class="bottom">©2014 Leting <a href="javascript:;" target="_blank">关于</a> <span>京ICP证030173号</span>  More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a><img width="13" height="16" src="images/copy_rignt_24.png" /></div>
 <div class="screenbg">
   <ul>
-    <li><a href="javascript:;"><img src="images/0.jpg"></a></li>
-    <li><a href="javascript:;"><img src="images/1.jpg"></a></li>
-    <li><a href="javascript:;"><img src="images/2.jpg"></a></li>
+    <li><a href="javascript:;"><img src="../static/images/0.jpg"></a></li>
+    <li><a href="javascript:;"><img src="../static/images/1.jpg"></a></li>
+    <li><a href="javascript:;"><img src="../static/images/2.jpg"></a></li>
   </ul>
 </div>
 </body>
